syntax = "proto3";

package notification;
option go_package = "notification-service/proto";

message NotificationResponse {
  uint32 id = 1;
  uint32 payment_id = 2;
  uint32 order_id = 3;
  string message = 4;
  string status = 5;
  string created_at = 6;
}

message ListNotificationsRequest {}
message ListNotificationsResponse {
  repeated NotificationResponse notifications = 1;
}

service NotificationService {
  rpc ListNotifications (ListNotificationsRequest) returns (ListNotificationsResponse);
}